Fixed overflowing daily forecast divs

--- a/src/styles.css
+++ b/src/styles.css
@@ -16,7 +16,6 @@ body {
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  overflow: visible;
 }
 
 form {
@@ -77,7 +76,7 @@ main {
   background-color: beige;
   height: auto;
   display: grid;
-  grid: auto 20vh auto 5vh 1fr / 1fr 1fr;
+  grid: auto 20vh auto 5vh auto / 1fr 1fr;
   padding: 15px 100px 70px;
   justify-items: center;
   gap: 30px;
@@ -95,14 +94,37 @@ main {
     width: 100%;
   }
 
+  div.dailyDiv::before {
+    content: '';
+    background-color: red;
+    position: absolute;
+    height: calc(100% - 30px);
+    top: 15px;
+    width: 2px;
+    left: 50%;
+  }
+
+  div.singleDailyDiv::after {
+    content: '';
+    background-color: var(--show, red);
+    position: absolute;
+    height: 2px;
+    width: calc(100% + 15px);
+    left: -7.5px;
+    bottom: -7.5px;
+  }
+
   div.card.dailyDiv {
     display: grid;
+    grid: repeat(auto-fit, 100px) / 1fr 1fr;
     gap: 10px;
     grid-area: 5 / 1 / 6 / 4;
+    position: relative;
 
     div.singleDailyDiv {
       display: grid;
-      grid: 1fr 1fr/1fr 1fr 1fr;
+      grid: 50px 50px / 1fr 1fr 1fr;
+      position: relative;
 
       span.date {
         grid-area: 1 / 2 / 3 / 3;
